# C

OpenCL/: code_cpu.cpp  code_gpu.cpp  kernel.cl
OpenCL-IMX/: Makefile  README.md  export
OpenCL-IMX/kernel/: compute_sp.cl
OpenCL-IMX/src/: Makefile  demo.cpp  demo.h
OpenCL-IMX/teste/: hello  hello.cpp
arduino/exp_network/: sample.ino
blueowl/: Makefile  app.c  epag-server  financial.c  library.h  log.txt  main.c  network.c  utils.c  web.c
buildroot-qt/: README.md  build-qt.sh
buildroot-qt/configs/: config-freescale-qt5_defconfig
buildroot-qt/docs/: qtcreator.md
buildroot-qt/examples/: calibration.md
buildroot-qt/patches/: 0002-Hwmon-driver.patch  0003-DTS-File.patch  0004-SHT15-config.patch
buildroot-qt/script/: burn-sdcard.sh  format-sdcard.sh
c++-editor/editor/: Editor  diego.txt
chat/: chat_server.c
codes/gtk-ml-experience/: CMakeLists.txt  README.md  run
codes/gtk-ml-experience/gtk-widgets/: gtk-widgets.css
codes/gtk-ml-experience/include/: gtk-main-experience.hpp
codes/gtk-ml-experience/src/: gtk-helper.cpp  gtk-main-experience.cpp
codes/gtk3-imx-experience/: README.md
codes/imx-ml-experience/: .gitignore  CMakeLists.txt  README.md
codes/imx-ml-experience-cpp/: .gitignore  demos.txt
codes/imx-ml-experience-dev/: CMakeLists.txt  README.md
codes/imx-ml-experience-dev/gtk3-ui/: imx-ml-experience.glade  imx-ml-experience.glade~
codes/imx-ml-experience-dev/include/: imx-ml-experience.h
codes/imx-ml-experience-dev/modules/: a.cpp  link  test.cpp
codes/imx-ml-experience-dev/src/: imx-ml-experience.c  imx-ml-helper.c
codes/imx-text-editor/: CMakeLists.txt  README.md
codes/imx-text-editor/src/: CMakeCache.txt  Makefile  cmake_install.cmake  editor.c  extra.c  fileselect.c  find.c  findreplace.c  menu.c
codes/libai4es/: README.md
codes/ml-launcher/: README.md
codes/mutch/: LICENSE
compact_server/compactSPI/: bus.py  main.py  motor.py  scan.py  serial.py  test.py  utils.py
compact_server/server/: banana-server.py
data_structure/: Makefile  common.h  main.c  tree.c  utils.c
deb-packages/: README.md
deb-packages/imagewriter_1.0.18/: Makefile
debayer/: README.md  build.sh  create.c  debayer.c
debayer/media/: image.raw
debayer/scripts/: convert.py  test.py
deprecated/: CNAME  LICENSE.md  _config.yml
deprecated/_data/: settings.yml
deprecated/_includes/: google-analytics.html
deprecated/_posts/: 2016-09-28-Booting-iMX6-under-one-second.md  2016-10-19-How_to_decrease_boot_time_on_iMX6.md  2017-04-12-Creating_Qt_Application_for_iMX.md  2017-12-18-Getting-Started-iMX8-Source-Code.md  2018-01-04-How_to_measure_network_speed_and_bandwidth_on_iMX_boards.md  2018-02-05-How_to_boot_imx_using_ramdisk.md  2018-03-21-Installing-Libraries-ML.md  2018-05-20-Overview.md  2018-05-22-Machine-Learning-Rules.md  2018-05-23-Setting-Up-Yocto.md  2018-07-04-Neural-Net-Tensorflow.md  2018-07-12-POSIX-Serial-Terminal.md  2018-07-16-Seeting-Up-Yocto-for-iMX-BSP-releases.md  2018-07-17-Building-UBoot-for-iMX8QXP.md  2018-08-07-Fourier-Series.md  2018-10-03-OpenCL-Overview.md  (+17 more)
diegohdorta.github.io/: _config.yml  index.md
distros/: README.md
doc/: diego.asm  file.asc
dorsole/: Makefile  debug.c  debug.h  serial.c  serial.h
dorvis/: README.md
e-pag/: Doxyfile  Makefile  app.c  database.c  database.txt  devices.c  doc.txt  financial.c  hello_select.c  helper.c  library.h  main.c  network.c  queue.c  thread.c  utils.c  web.c
hpc/: README.md
images/: hello  hello-tiff.c
imx-ml-demos/: README.md
imx-ml-experience-cpp/: CMakeLists.txt  README.md
imx-ml-experience-cpp/data/: release-notes.txt
imx-ml-experience-cpp/gtk3-css/: gtk.css
imx-ml-experience-cpp/gtk3-ui/: imx-ml-experience.glade
imx-ml-experience-cpp/include/: imx-ml-sdd.hpp
imx-ml-experience-cpp/media/gnomestock/: index.theme
imx-ml-experience-cpp/src/: imx-ml-experience.cpp  imx-ml-helper.cpp  imx-ml-interface.cpp  imx-ml-ssd.cpp
imx-robin-bird/: CMakeLists.txt
imx-robin-bird/docs/: .~lock.robin.odt#  robin.odt  robin.tex  robin.txt
imx-robin-bird/docs/academic-journal/: jmlr2e.sty  sample.tex
imx-robin-bird/examples/: CMakeLists.txt
imx-robin-bird/examples/handwritten-digit/: CMakeLists.txt  handwritten-digit.cpp
imx-robin-bird/examples/handwritten-digit-file/: CMakeLists.txt  compile.sh  handwritten-digit-file.cpp
imx-robin-bird/examples/ml-experience/: CMakeLists.txt  README.md
imx-robin-bird/examples/ml-experience/experience/: imx-ml-experience.cpp  imx-ml-interface.cpp  imx-ml-ssd.cpp
imx-robin-bird/examples/ml-experience/include/: imx-ml-experience.hpp  imx-ml-helper.hpp  imx-ml-interface.hpp  imx-ml-sdd.hpp
imx-robin-bird/examples/ml-experience/modules/model/: graph.pbtxt
imx-robin-bird/examples/ml-experience/ui/: ml-experience.glade
imx-robin-bird/examples/sample/: CMakeLists.txt  sample.cpp
imx-robin-bird/robin/robin-core/: calc-matrix.cpp  calc-matrix.h
imx-robin-bird/robin/robin-nn/: robin-nn.cpp  robin-nn.h
imxcloud/: README.adoc
julia/: keyvalueserver.jl
learningcodes/: README.md
libdorta/: Makefile
libkivatz/: Makefile
lwib/: Makefile  README.md
medipix/: Makefile  common.h  image.c  main.c  medipix.c  network.c  read12bits.py  test-reorder.c  test-tiff.c  thread.c  utils.c
medipix-ioc/: Makefile
medipix-server/: common.h  network.c  raw.c  tiff.c  utils.c
meta-ml/: README.md
ml-demos/: LICENSE  index.html  yocto_recipes
ml-experience/: CMakeLists.txt  README.md
mlblog/: Gemfile  _config.yml  about.md  contact.md  index.md
nxp-doc-template/: README.md  Rakefile  default-theme.yml  eIQSamplesApps.adoc  example.adoc  nxp-template-generator  robin.adoc
pyimx/: CHANGES.txt  LICENSE  setup.py
python-fourier/: README.md  code.py
recaman_sequence/: main.c  readme.txt  recaman.c  recaman.h
robin-bird-page/: README.md
sagan-corrector/: README.md  sagan-corrector.py
sequences/: Makefile  hash.c  main.c  sequences.c  sequences.h
serial/: serial.c
sigma/: Makefile
soccer/: Makefile  main.c
switch-demo/: README.md
switch-inference/: LICENSE  Makefile  README
(+520 files in other folders)
