# Set the name and the supported language of the project
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

set(CMAKE_NO_SYSTEM_FROM_IMPORTED ON)
set(PROJECT_NAME imxeditor)
project(${PROJECT_NAME})

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK2 REQUIRED gtk+-2.0)
PKG_CHECK_MODULES(GDK REQUIRED gtk+-2.0)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g3 -Ofast -std=c++11")

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.c")
add_executable(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTK3_LIBRARIES})
